--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,10 @@ input:disabled {
   color: var(--gray);
 }
 
+.textGray2 {
+  color: #649cd4;
+}
+
 .textRed {
   color: var(--delete-red);
 }
@@ -965,4 +969,65 @@ textarea {
     margin-left: 0;
   }
 
+}
+
+.borderBottom {
+  border-bottom: 1px solid var(--light-blue);
+}
+
+.maxw {
+  max-width: 300px;
+}
+
+
+.dropbtn {
+  background-color: #eeebeb;
+  color: rgb(131, 131, 131);
+  padding: 13px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  text-align: start;
+  border-radius: 4px;
+}
+
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #e2e2e2;
+}
+
+#myInput {
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+}
+
+#myInput:focus {
+  outline: 0;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  overflow: auto;
+  border: 1px solid #ddd;
+  z-index: 1;
+  max-height: 300px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+  background-color: #ddd;
 }
