--- a/src/App.css
+++ b/src/App.css
@@ -180,14 +180,13 @@ input:disabled {
   height: 28px;
 }
 
-
 .smallLoader::after {
   width: 28px;
   height: 28px;
 }
 
 .loader::after {
-  content: '';
+  content: "";
   box-sizing: border-box;
   position: absolute;
   left: 50%;
@@ -232,7 +231,6 @@ input:disabled {
 }
 
 @media screen and (min-width: 1000px) {
-
   .lineshartContainer {
     max-width: 80%;
     min-height: 500px;
@@ -240,14 +238,12 @@ input:disabled {
 }
 
 @media screen and (max-width: 1000px) {
-
   .lineshartContainer {
     min-height: 400px;
   }
 }
 
 @media screen and (max-width: 450px) {
-
   .lineshartContainer {
     min-height: 300px;
   }
@@ -340,7 +336,7 @@ textarea {
 
 /*Auth section*/
 .registrationContainer {
-  background-image: url('assets/loginBg.jpg');
+  background-image: url("assets/loginBg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -454,8 +450,8 @@ textarea {
   border-bottom: 1px solid var(--light-gray) !important;
   color: var(--dark-bleu);
 }
-.draggedItem{
-   color: var(--dark-bleu);
+.draggedItem {
+  color: var(--dark-bleu);
 }
 
 .sideBarList li:first-child {
@@ -474,7 +470,6 @@ textarea {
   -webkit-box-shadow: 0px 14px 23px 0px rgba(57, 87, 112, 0.14);
   -moz-box-shadow: 0px 14px 23px 0px rgba(57, 87, 112, 0.54);
 }
-
 
 .geoItem {
   border-radius: 10px;
@@ -504,7 +499,7 @@ textarea {
 }
 
 .initials-circle-bg {
-  background-image: url('./assets/avatar.svg');
+  background-image: url("./assets/avatar.svg");
   background-repeat: no-repeat;
   background-size: cover;
   /* background-size: 100% 100%; */
@@ -576,7 +571,6 @@ textarea {
   margin-bottom: auto;
 }
 
-
 .myAccordion .css-1elwnq4-MuiPaper-root-MuiAccordion-root {
   margin-bottom: 16px !important;
   border-radius: 10px !important;
@@ -611,7 +605,10 @@ textarea {
 }
 
 .ddSelect .css-19mk8g1-MuiInputBase-root-MuiFilledInput-root,
-.ddSelect .css-19mk8g1-MuiInputBase-root-MuiFilledInput-root:hover:not(.Mui-disabled):before,
+.ddSelect
+  .css-19mk8g1-MuiInputBase-root-MuiFilledInput-root:hover:not(
+    .Mui-disabled
+  ):before,
 .ddSelect .css-19mk8g1-MuiInputBase-root-MuiFilledInput-root:hover,
 .ddSelect .css-19mk8g1-MuiInputBase-root-MuiFilledInput-root:after,
 .ddSelect .css-19mk8g1-MuiInputBase-root-MuiFilledInput-root:before {
@@ -783,7 +780,7 @@ textarea {
 }
 
 .PhoneInput,
-.addressColl>* {
+.addressColl > * {
   flex: 1;
 }
 
@@ -937,7 +934,7 @@ textarea {
     align-content: start;
   }
 
-  .registrationContainer>div:first-child {
+  .registrationContainer > div:first-child {
     margin: 40px 0;
   }
 
@@ -979,7 +976,6 @@ textarea {
   .mainDashboardContainer {
     margin-left: 0;
   }
-
 }
 
 .borderBottom {
@@ -989,7 +985,6 @@ textarea {
 .maxw {
   max-width: 350px;
 }
-
 
 .dropbtn {
   background-color: #eeebeb;
@@ -1045,4 +1040,9 @@ textarea {
 
 .p-10 {
   padding: 12px !important;
+}
+
+.highlightedCall {
+  background-color: #e6eeff;
+  border-radius: 5px;
 }
