--- a/src/App.css
+++ b/src/App.css
@@ -1046,3 +1046,12 @@ textarea {
   background-color: #e6eeff;
   border-radius: 5px;
 }
+
+.inputPrefix {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 16px;
+  color: #333;
+}
