--- a/src/screens/Finalie2.css
+++ b/src/screens/Finalie2.css
@@ -5,3 +5,41 @@ table.table.table-bordered.mt-10 {
     border-radius: 15px;
  
 }
+/* CSS Styles */
+.wrapper {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  
+  .mat_list {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .card {
+    background-color: #fff;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    padding: 10px;
+    margin: 10px 0;
+  }
+  
+  .scrollable {
+    max-height: 300px; 
+    width: 300px;
+    overflow-y: auto;
+  }
+  
+  li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+  }
+ 
