--- a/src/screens/Finalie2.css
+++ b/src/screens/Finalie2.css
@@ -3,7 +3,21 @@ table.table.table-bordered.mt-10 {
     background-color: #9dbcea87;
     border: hidden;
     border-radius: 15px;
+    width: 500px;
+    table-layout: fixed;
+  margin-left: 10%;
  
+}
+.calendar >tbody, td, tfoot, th, thead, tr {
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
+  width: 8rem;
+}
+
+
+.calendar__td{
+  height: 200px;
 }
 /* CSS Styles */
 .wrapper {
@@ -15,7 +29,13 @@ table.table.table-bordered.mt-10 {
     list-style-type: none;
     padding: 0;
   }
-  
+  th {
+    background: #191c2187 !important;
+    color: #f5f5f5;
+    border: 0px;
+}
+
+
   .card {
     background-color: #fff;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
