working on edit route functionality in calendar page

--- a/src/screens/Finalie2.css
+++ b/src/screens/Finalie2.css
@@ -15,6 +15,11 @@ table.table.table-bordered.mt-10 {
   width: 8rem;
 }
 
+.route__map__container {
+  background: white;
+  margin: 8px 0px;
+}
+
 
 .calendar__td{
   height: 200px;
